# tauri-plugin-notification

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  README.md  api-iife.js  build.rs  package.json
Source/: commands.rs  desktop.rs  error.rs  init-iife.js  lib.rs  mobile.rs  models.rs
Source/notify_rust/: error.rs  image.rs  macos.rs  miniver.rs  mod.rs  notification.rs  server.rs  timeout.rs  urgency.rs  windows.rs
Source/notify_rust/hints/: constants.rs  tests.rs
Source/notify_rust/xdg/: bus.rs  dbus_rs.rs  mod.rs  zbus_rs.rs
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts  init.ts
ios/: .gitignore
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: mobile.rs
