[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
log = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
tauri = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
color-backtrace = "0.6"
ctor = "0.2"
maplit = "1"

[features]
windows7-compat = ["win7-notifications", "windows-version"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Send desktop and mobile notifications on your Tauri application."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-notification"
name = "tauri-plugin-notification"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.1"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-linux-android"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "Only works for installed apps. Shows powershell name & icon in development." }

[target]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))']

[target.'cfg(any(target_os = "macos", windows, target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
notify-rust = "4.11"

[target.'cfg(target_os = "ios")']

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { workspace = true, features = ["wry"] }

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
win7-notifications = { version = "0.4.5", optional = true }
windows-version = { version = "0.1", optional = true }
