[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }

[dependencies]
log = { version = "0.4.25" }
rand = "0.9"
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
serde_repr = "0.1"
tauri = { version = "2.2.5" }
thiserror = { version = "2.0.11" }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
color-backtrace = "0.7"
ctor = "0.3"
maplit = "1"

[features]
windows7-compat = ["win7-notifications", "windows-version"]

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Send desktop and mobile notifications on your Tauri application."
edition = "2024"
license-file = "LICENSE"
links = "tauri-plugin-notification-read-only"
name = "tauri-plugin-notification-read-only"
repository = "https://github.com/tauri-apps/tauri"
rust-version = "1.85.0"
version = "2.2.1"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-linux-android"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "Only works for installed apps. Shows powershell name & icon in development." }

[target]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))']

[target.'cfg(any(target_os = "macos", windows, target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
notify-rust = "4.11"

[target.'cfg(target_os = "ios")']

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2.2.5", features = ["wry"] }

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
win7-notifications = { version = "0.4.5", optional = true }
windows-version = { version = "0.1", optional = true }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
notify-rust = "4.11"

[dev-dependencies]
color-backtrace = "0.7"
ctor = "0.2"
maplit = "1"

[features]
windows7-compat = ["win7-notifications", "windows-version"]
